[gd_scene load_steps=40 format=2]

[ext_resource path="res://Art/NPCS/ScientistB/Walk.png" type="Texture" id=1]
[ext_resource path="res://Art/NPCS/ScientistB/Idle.png" type="Texture" id=2]
[ext_resource path="res://Art/NPCS/ScientistA/Idle.png" type="Texture" id=3]
[ext_resource path="res://Art/NPCS/ScientistB/Transform.png" type="Texture" id=4]
[ext_resource path="res://Art/NPCS/ScientistA/Transform.png" type="Texture" id=5]
[ext_resource path="res://Art/NPCS/ScientistA/Walk.png" type="Texture" id=6]
[ext_resource path="res://Art/Fonts/SuperWhite.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Scientist.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 4, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 148, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 28, 48 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "transform",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 2, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 98, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 146, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 2, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 98, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 146, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 194, 0, 28, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 242, 0, 28, 48 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "transform",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Theme" id=67]
default_font = ExtResource( 7 )

[node name="Scientist" type="Node2D"]
script = ExtResource( 8 )

[node name="ScientistA" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 37 )
animation = "idle"
playing = true

[node name="ScientistB" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 66 )
animation = "idle"
frame = 3
playing = true

[node name="FiredText" type="Label" parent="."]
visible = false
margin_left = -36.0
margin_top = -38.0
margin_right = 36.0
margin_bottom = -24.0
theme = SubResource( 67 )
text = "You're FIRED!"
